traefik/traefik.yaml
# ------------------- Traefik Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik
        image: traefik
        imagePullPolicy: Always
        args:
        - --configfile=/config/traefik.toml
        ports:
        - name: http
          containerPort: 80
        - name: httpn
          containerPort: 8880
        - name: https
          containerPort: 443
        - name: dashboard
          containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: acme
          mountPath: /acme
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
      volumes:
      - name: config
        configMap:
          name: traefik-config
      - name: acme
        hostPath:
          path: /data/config/traefik

---
# ------------------- Traefik Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  - name: dashboard
    port: 8080
  type: LoadBalancer
