traefik/traefik-dashboard-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.internal.domain
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
